--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
 
     <div class="watch">
-      <h1 class="title">Stop watch</h1>
-      <div class="digit-top text-style">12</div>
-      <div class="digit-right text-style">3</div>
-      <div class="digit-bottom text-style">6</div>
-      <div class="digit-left text-style">9</div>
-      <div class="center"></div>
-      <div class="minutes element"></div>
-      <div class="seconds element"></div>
+      <h1 class="watch__title">Stop watch</h1>
+      <div class="watch__digit-top watch__digit-top_text-style">12</div>
+      <div class="watch__digit-right watch__digit-right_text-style">3</div>
+      <div class="watch__digit-bottom watch__digit-bottom_text-style">6</div>
+      <div class="watch__digit-left watch__digit-left_text-style">9</div>
+      <div class="watch__center"></div>
+      <div class="watch__minutes"></div>
+      <div class="watch__seconds"></div>
     </div>
 </body>
 </html>
